Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22722

Assertion "inited==NONE" failed in handler::ha_index_init on the slave during UPDATE

    XMLWordPrintable

Details

    Description

      Reproducible on 10.5, with Myisam, not with InnoDB.

      source include/master-slave.inc;
       
      create table t1 (i1 int, a1 text, unique key i1 (a1)) engine=myisam;
      insert into t1 values (1,1);
      update t1 set a1 = 'd' limit 1;
       
      sync_slave_with_master;
      connection slave;
       
      connection master;
      drop table t1;
       
      --source include/rpl_end.inc
      

      10.5 8569dac1ec9f6853a0b2f3

      #3  <signal handler called>
      #4  0x00007fb74811b428 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:54
      #5  0x00007fb74811d02a in __GI_abort () at abort.c:89
      #6  0x00007fb748113bd7 in __assert_fail_base (fmt=<optimized out>, assertion=assertion@entry=0x563f42ef17d9 "inited==NONE", file=file@entry=0x563f42ef17a8 "/10.5/sql/handler.h", line=line@entry=3323, function=function@entry=0x563f42ef5960 <handler::ha_index_init(unsigned int, bool)::__PRETTY_FUNCTION__> "int handler::ha_index_init(uint, bool)") at assert.c:92
      #7  0x00007fb748113c82 in __GI___assert_fail (assertion=0x563f42ef17d9 "inited==NONE", file=0x563f42ef17a8 "/10.5/sql/handler.h", line=3323, function=0x563f42ef5960 <handler::ha_index_init(unsigned int, bool)::__PRETTY_FUNCTION__> "int handler::ha_index_init(uint, bool)") at assert.c:101
      #8  0x0000563f420913dd in handler::ha_index_init (this=0x7fb6f0038740, idx=0, sorted=false) at /10.5/sql/handler.h:3323
      #9  0x0000563f424b441a in handler::check_duplicate_long_entry_key (this=0x7fb6f0038740, new_rec=0x7fb6f00382d8 "\370\001", key_no=0) at /10.5/sql/handler.cc:6629
      #10 0x0000563f424b4df8 in handler::check_duplicate_long_entries_update (this=0x7fb6f0038740, new_rec=0x7fb6f00382d8 "\370\001") at /10.5/sql/handler.cc:6761
      #11 0x0000563f424b61ec in handler::ha_update_row (this=0x7fb6f0038740, old_data=0x7fb6f00382f0 "\370\001", new_data=0x7fb6f00382d8 "\370\001") at /10.5/sql/handler.cc:7031
      #12 0x0000563f4261de7f in Update_rows_log_event::do_exec_row (this=0x7fb6f0960af8, rgi=0x7fb6f0000a90) at /10.5/sql/log_event_server.cc:8325
      #13 0x0000563f426158ed in Rows_log_event::do_apply_event (this=0x7fb6f0960af8, rgi=0x7fb6f0000a90) at /10.5/sql/log_event_server.cc:5650
      #14 0x0000563f42045df5 in Log_event::apply_event (this=0x7fb6f0960af8, rgi=0x7fb6f0000a90) at /10.5/sql/log_event.h:1496
      #15 0x0000563f420388e4 in apply_event_and_update_pos_apply (ev=0x7fb6f0960af8, thd=0x7fb6f0001598, rgi=0x7fb6f0000a90, reason=0) at /10.5/sql/slave.cc:4003
      #16 0x0000563f42038ec7 in apply_event_and_update_pos (ev=0x7fb6f0960af8, thd=0x7fb6f0001598, rgi=0x7fb6f0000a90) at /10.5/sql/slave.cc:4165
      #17 0x0000563f42039880 in exec_relay_log_event (thd=0x7fb6f0001598, rli=0x563f46015458, serial_rgi=0x7fb6f0000a90) at /10.5/sql/slave.cc:4486
      #18 0x0000563f4203d1b8 in handle_slave_sql (arg=0x563f46013790) at /10.5/sql/slave.cc:5659
      #19 0x0000563f42743efc in pfs_spawn_thread (arg=0x7fb7041f96e8) at /10.5/storage/perfschema/pfs.cc:2201
      #20 0x00007fb748f5c6ba in start_thread (arg=0x7fb73c2f3700) at pthread_create.c:333
      #21 0x00007fb7481ed41d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109
      
      

      Attachments

        Issue Links

          Activity

            People

              sachin.setiya.007 Sachin Setiya (Inactive)
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 1.5h
                  1d 1.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.