MDEV-22722 Assertion "inited==NONE" failed in handler::ha_index_init on the slave during UPDATE

Add missing call for handler->prepare_for_insert() in rows event.